functional list and detail page

--- a/templates/teams/teams_detail.html
+++ b/templates/teams/teams_detail.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<h2> Coming Soon </h2>
+<h2> {{teams.name}} </h2>
+<h2> {{teams.trophy}} </h2>
+<h2> {{teams.rater}} </h2>
+
 {% endblock content %}
