--- a/templates/teams/teams_delete.html
+++ b/templates/teams/teams_delete.html
@@ -1,12 +1,12 @@
 {% extends '_base.html' %}
 
-{% load crispy_forms_tags %}
 
 {% block content %}
 <h2> Delete Team </h2>
 
 <form action="" method="POST">
   {% csrf_token %}
+  {{ form.as_p }}
   <p>Do you really want to delete Teams</p>
   <input type="submit" value="OK">
 </form>
