--- a/templates/teams/teams_update.html
+++ b/templates/teams/teams_update.html
@@ -1,5 +1,12 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<h2> Coming Soon </h2>
+<h1> Update Team</h1>
+<form action="" method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="SAVE">
+
+</form>
+
 {% endblock content %}
